# demo

./: .gitignore  README.md  audio_config.json  credits.md  diag.py  game.py  level_editor.py  notes.md  pyproject.toml  reloader.py
.github/workflows/: build.yml
assets/buttons/: pause_button.aseprite
assets/dialogue/: npc1.json  player_dialogue.json
assets/entities/: door_glow_right.aseprite  glass_of_milk.aseprite  sticky_note.aseprite
assets/levels/: bossnew.json  level1new.json  level2new.json  level3new.json  level4new.json  map.json
demo_game/: .gitignore  build_windows.bat  changelog.md  credits.json  credits_detailed.json  game.py  game.spec  paths.py  requirement.txt
demo_game/scripts/audio/: sounds.py
demo_game/scripts/core/: cutscene_engine.py  interact.py  interactables_loader.py  level_manager.py  utils.py  walkable_zone.py
demo_game/scripts/entities/: digital_clock.py  entities.py  mom.py
demo_game/scripts/rendering/: tilemap.py
demo_game/scripts/scenes/: end_scene.py  first_scene.py  interactables.json  intro_scene.py  tutorial_scene.py
demo_game/scripts/systems/: ghost_manager.py  (+1 more)
scripts/audio/: sounds.py
scripts/core/: cutscene_engine.py  interact.py
scripts/entities/: digital_clock.py  entities.py  ghost_manager.py
scripts/rendering/: effects.py
scripts/scenes/: busy_route_scene.py  first_scene.py  intro_scene.py  quiet_route_scene.py  route_choice_scene.py  tutorial_scene.py
scripts/systems/: heart_rate.py  interaction.py  mail_system.py  task_system.py
scripts/ui/: dialogue_manager.py  font.py  thought_manager.py
(+6 files in other folders)
